--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "framework7-vue-webpack-template",
+  "name": "greenplants",
   "version": "1.0.1",
-  "description": "Framework7 Vue + Webpack starter app template",
+  "description": "green plants",
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js"
@@ -47,6 +47,7 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
+    "fastclick": "^1.0.6",
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
